dist/netbox/Deployment.netbox-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/component: worker
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: netbox
  name: netbox-worker
  namespace: netbox
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: netbox-worker-netbox-worker-deployment-c84720b4
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: worker
        app.kubernetes.io/name: netbox
        cdk8s.io/metadata.addr: netbox-worker-netbox-worker-deployment-c84720b4
    spec:
      automountServiceAccountToken: false
      containers:
        - command:
            - /opt/netbox/venv/bin/python3
            - /opt/netbox/netbox/manage.py
            - rqworker
          image: netboxcommunity/netbox:v4.6.5
          imagePullPolicy: Always
          name: netbox-worker
          resources:
            limits:
              memory: 1024Mi
            requests:
              cpu: 50m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
