dist/netbox/Deployment.netbox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: netbox
  name: netbox
  namespace: netbox
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: netbox-app-netbox-app-deployment-c8d563b8
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: netbox
        cdk8s.io/metadata.addr: netbox-app-netbox-app-deployment-c8d563b8
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: REDIS_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: valkey-password
                  name: netbox-valkey
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: db-creds
          image: netboxcommunity/netbox:v4.6.5
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 8080
          name: netbox
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 10
            tcpSocket:
              port: 8080
          resources:
            limits:
              memory: 2048Mi
            requests:
              cpu: 50m
              memory: 1024Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 15
            periodSeconds: 5
            tcpSocket:
              port: 8080
          volumeMounts:
            - mountPath: /etc/netbox/media
              name: pvc-data
            - mountPath: /etc/netbox/config/authentik.py
              name: configmap-authentik
              subPath: authentik.py
            - mountPath: /opt/netbox/netbox/netbox/custom_pipeline.py
              name: configmap-authentik
              subPath: custom_pipeline.py
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-data
          persistentVolumeClaim:
            claimName: data
            readOnly: false
        - configMap:
            name: authentik
          name: configmap-authentik
