dist/netbox/Service.netbox-valkey-master.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: netbox
    app.kubernetes.io/name: valkey
  name: netbox-valkey-master
  namespace: netbox
spec:
  ports:
    - name: tcp-valkey
      port: 6379
      targetPort: valkey
  selector:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: netbox
    app.kubernetes.io/name: valkey
  type: ClusterIP
