dist/netbox/Ingress.netbox.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: netbox
  name: netbox
  namespace: netbox
spec:
  rules:
    - host: netbox.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: netbox
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - netbox.cmdcentral.xyz
      secretName: netbox-tls
